--- a/src/MessageSender.css
+++ b/src/MessageSender.css
@@ -10,7 +10,7 @@
 
 .messageSender__top {
     display: flex;
-    border-bottom: 1px solid #eff2f5;
+    border-bottom: 1px solid #3A3B3C;
     padding: 15px;
 }
 
